// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConvertButton > should match snapshot for convert button 1`] = `
<button
  class="w-full bg-blue-600 hover:bg-blue-700 text-white font-medium py-3 px-4 rounded-md transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
  data-testid="convert-button"
  type="submit"
>
  Convert
</button>
`;

exports[`ConvertButton > should match snapshot for loading state 1`] = `
<button
  class="w-full bg-blue-600 hover:bg-blue-700 text-white font-medium py-3 px-4 rounded-md transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
  data-testid="convert-button"
  disabled=""
  type="submit"
>
  Converting...
</button>
`;

exports[`ConvertButton > should match snapshot for retry button 1`] = `
<button
  class="w-full font-medium py-3 px-4 rounded-md transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-error-500 focus:ring-offset-2"
  data-testid="convert-button"
  data-variant="destructive"
  type="button"
>
  An error occurred, try again
</button>
`;
